# nobs-corpus-exchange

./: .gitignore  HANDOFF.md  PRD.md  README.md  ROADMAP.md  deliberation_engine.md  requirements-layer-4.txt  requirements-layers-123.txt  results_poro.csv  run.sh
123/: README.md  pyproject.toml
123/.sisyphus/: boulder.json
123/.sisyphus/evidence/: T23-demo-utf8.json  T23-demo.json  T28-quickstart.json  T31-calibration.yaml  T31-demo.json  T31-report.md  T31-smoke-eval.csv  T31-smoke-eval.csv.log.jsonl  ablations.json  calibrated.yaml  report.md  smoke_out.csv.log.jsonl
123/.sisyphus/plans/: building-123-triage-dp.md
123/.sisyphus/run-continuation/: ses_127ca743affe01PUkvENufWY5g.json  (+4 more)
123/configs/: em-hsd-v2-qwen-reddit.yaml  em-hsd-v2-qwen.yaml  em-hsd-v2-qwen35-08b.yaml  em-hsd-v2-qwen35.yaml  em-hsd-v2-real.yaml  em-hsd-v2-test.yaml  em-hsd-v2-triage-composed-qwen.yaml  em-hsd-v2-triage-composed.yaml  em-hsd-v2-triage-dp-test.yaml  em-hsd-v2-triage-real.yaml  em-hsd-v2.yaml
123/docs/: FALLBACK_POLICY.md  MIGRATION.md  PRIVACY_CLAIMS.md  RESEARCH_NOTE.md
123/scripts/: check_no_downloads.py  demo.py  generate_report.py  normalize_csv.py  normalize_privhsd_csv.py  pipeline_demo.py  quality_gate.py  run_ablations.py  run_qwen_hate_subset.py  run_reddit_eval.py  serve.py  setup_conda_env.sh  setup_models.py  smoke_eval.py  test_qwen.py
123/tests/: conftest.py  test_backward_compat.py  test_csv_compat.py  test_em_hsd_v2.py  test_interfaces.py  test_layer1_saliency_router.py  test_layer4_orchestrator.py  test_layer_routes_applied.py  test_no_downloads.py  test_pipeline.py  test_server_classifier.py  test_server_process.py  test_triage_compose.py  test_triage_dp_integration.py
em-hsd-v2/: pyproject.toml  requirements-from-lum.txt
em-hsd-v2/configs/: em-hsd-v2-composed.yaml  em-hsd-v2-qwen-reddit-tune.yaml  em-hsd-v2-qwen-reddit.yaml  em-hsd-v2-qwen.yaml  em-hsd-v2-qwen35-08b.yaml  em-hsd-v2-qwen35.yaml  em-hsd-v2-test.yaml  em-hsd-v2.yaml
em-hsd-v2/scripts/: build_llama_cpp.sh  download_qwen_gguf.py  reddit_to_loop.py  resolve_qwen_gguf_paths.py  run_qwen_hate_subset.py  run_reddit_eval.py  setup_conda_env.sh  setup_models.py  start_llama_server.sh  test_qwen.py
em-hsd-v2/tests/: test_csv_compat.py  test_em_hsd_v2.py  test_layer4_improvements.py  test_quick_wins.py
(+194 files in other folders)
