[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "em-hsd-v2"
version = "0.1.0"
description = "EM-HSD 2.0 layer-4 privatization (imports privhsd-spine from Johnny t0-1.03)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-learn",
    "pyyaml",
    "regex",
]

[project.optional-dependencies]
hf = [
    "torch",
    "transformers",
    "sentence-transformers",
]
emhsd = [
    "unsloth",
    "openai",
]
test = [
    "pytest",
]

[project.scripts]
em-hsd-run = "em_hsd_cli.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "gpu: tests requiring GPU and Unsloth models",
]
